fixed vertical aligning of examples

--- a/css/robotframework.css
+++ b/css/robotframework.css
@@ -372,7 +372,7 @@ a:hover {
 }
 
 .carousel-inner .item .column {
-  min-height: 600px;
+  height: 600px;
 }
 
 .vertical-align {
